# TinySvgView

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  Debug.cpp  Debug.hpp  Font.cpp  Font.hpp  MainWindow.cpp  MainWindow.hpp  Menu.cpp  Menu.hpp  TraceWindow.cpp  TraceWindow.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp  main.cpp
